# gnunet-channels

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
example/: chat.cpp  main.cpp
include/gnunet_channels/: cadet_port.h  channel.h  error.h  namespaces.h  service.h
scripts/: env.sh  peer1.conf  peer2.conf  start.sh
src/: cadet.cpp  cadet.h  cadet_connect.h  cadet_port.cpp  cadet_port.h  channel.cpp  channel_impl.cpp  channel_impl.h  hello_get.cpp  hello_get.h  hello_message.h  scheduler.cpp  scheduler.h  service.cpp
tests/: run_test.sh  test.cpp
